[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnd"
version = "0.1.7.1"
description = "BeNeuro data pipeline CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # -- CLI (lightweight base) ----------------------------------------------
    "typer>=0.9",
    "rich",
    "typing_extensions",
]

[project.optional-dependencies]
processing = [
    # -- data I/O & NWB ------------------------------------------------------
    # These neuroscience packages still ship breaking API changes between minor
    # releases (e.g. spikeinterface dropped `load_sync_channel`), so they are
    # pinned to the known-good minor line. Lower bound = last version verified
    # to work end-to-end; upper bound = next minor, where breaking changes land.
    "pynwb>=3.1.3,<4",
    "ndx-pose>=0.3.0,<0.4",
    "neuroconv>=0.9.3,<0.10",
    "h5py",

    # -- electrophysiology ---------------------------------------------------
    "spikeinterface>=0.104.7,<0.105",
    "probeinterface>=0.3.2,<0.4",

    # -- scientific stack ----------------------------------------------------
    "numpy",
    "pandas",
    "scipy",

    # -- misc ----------------------------------------------------------------
    "pydantic",
    "python-dateutil",
    "pytz",
]
dev = [
    "pytest",
    "bnd[processing]",
]

[project.scripts]
bnd = "bnd.cli:app"

[project.urls]
Homepage = "https://github.com/BeNeuroLab/bnd"
Repository = "https://github.com/BeNeuroLab/bnd"

[tool.hatch.build.targets.wheel]
packages = ["bnd"]
